--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
     <h3>Suggested Inputs:</h3>
     <p>[(Rect, Fill "#FF0000" :*** Stroke "#00FF00", Rotate 50.0 :<+> (Scale 0.5 :<+> Translate 2.0 0.2))]</p>
+    <p>[(Circle, Fill "#FF00FF" :*** Stroke "#42E5F4",  Scale 0.5 :<+> Translate 2.0 2.0)]</p>
 
     <textarea cols=150 rows=3 style="margin: 20px;"></textarea>
 
