--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <p>Enter a description and press enter to see it as an svg</p>
 
     <h3>Suggested Inputs:</h3>
-    <p>[(Circle, Fill "#f2abd2" :*** (Stroke "#000000" :*** StrokeWidth "3.0"), Scale 0.5 :<+> Translate 2.0 2.0), (Rect, Fill "#669b95" :*** Stroke "#FFFF00", Rotate 50.0 :<+> (Scale 0.5 :<+> Translate 2.0 0.2))]</p>
+    <p>[(Circle, Fill "#f2abd2" :*** (Stroke "#000000" :*** StrokeWidth 3.0), Scale 0.5 :<+> Translate 2.0 2.0), (Rect, Fill "#669b95" :*** Stroke "#FFFF00", Rotate 50.0 :<+> (Scale 0.5 :<+> Translate 2.0 0.2))]
+</p>
 
     <textarea cols=150 rows=3 style="margin: 20px;"></textarea>
 
