--- a/index.html
+++ b/index.html
@@ -2,46 +2,95 @@
   <head>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <style>
-    .error {
-      opacity: 0;
-    }
-    .visible {
-      background-color: #fc605a;
-      width: 200px;
-      height: 40px;
-      opacity: 1;
-      border-radius: 10px;
-      text-align: center;
-      padding: 15px;
-      margin: 10px;
-    }
+      body {
+        font-family: sans-serif;
+      }
+
+      .error {
+        display: none;
+        background-color: #fc605a;
+        width: 200px;
+        height: 20px;
+        border-radius: 10px;
+        text-align: center;
+        padding: 20px;
+        margin: 10px;
+      }
+
+      textarea {
+        border-radius: 5px;
+        margin: 20px;
+        width: 700px;
+        height: 70px;
+        resize: none;
+      }
+
+      .drawing {
+        width: 1000px;
+        height: 500px;
+        border: solid 2px;
+      }
+
+      .shape-format {
+        background-color: #dce2ed;
+        border-radius: 5px;
+        width: 500px;
+        padding: 20px;
+      }
     </style>
   </head>
 
   <body>
-    <h3>How To Use:</h3>
-    <p>Enter a description and press enter to see it as an svg</p>
-
-    <h3>Suggested Inputs:</h3>
+    <h3>Suggested Inputs</h3>
     <p>[(Circle, Fill "#f2abd2" :*** (Stroke "#000000" :*** StrokeWidth 3.0), ScaleN 1.0 0.5 :<+> Translate 1.0 2.0), (Rect, Fill "#669b95" :*** Stroke "#FFFF00", Rotate 50.0 :<+> (Scale 0.5 :<+> Translate 2.0 0.2))]</p>
 
-    <textarea cols=150 rows=3 style="margin: 20px;"></textarea>
+    <textarea placeholder="Type your shape description here!"></textarea>
 
     <div class="error">Error: Invalid input</div>
 
-    <div class="drawing" style="width: 1000px; height: 500px; border: solid 1px;">
+    <div class="drawing">
     </div>
+
+    <h3>Usage</h3>
+    <p>Enter a description in the format </p>
+      <div class="shape-format">
+        [(Shape, Style, Transform)]
+        </br></br>
+        <i><u><strong>Examples:</strong></u></i>
+        </br>
+        Shapes:
+        <ul>
+          <li>Rect</li>
+          <li>Circle</li>
+        </ul>
+        Styles:
+        <ul>
+          <li>Fill "#c0ffee"</li>
+          <li>Stroke "#bada55" </li>
+          <li>StrokeWidth 2.0</li>
+          <li>Fill "#f2abd2" :*** (Stroke "#000000" :*** StrokeWidth 3.0)</li>
+        </ul>
+        Transforms:
+        <ul>
+          <li>Scale 0.5</li>
+          <li>ScaleN 2.0 0.5</li>
+          <li>Rotate 45.0</li>
+          <li>Translate 1.5 2.0</li>
+          <li>Rotate 90.0 :<+> (Scale 0.5 :<+> Translate 2.0 0.2)</li>
+        </ul>
+      </div>
+    <p>and press enter to see it as an svg</p>
 
     <script>
     $('textarea').on('keypress', function (e) {
       if(e.which === 13){ // Enter
         // Post the description to the Shapes endpoint and draw the returned Svg
         $.post('/shapes', { description: $('textarea').val() }, function (response) {
-          $('.error').removeClass("visible");
+          $('.error').hide();
           $('.drawing').html(response);
         })
         .fail(function() {
-          $('.error').addClass("visible");
+          $('.error').show();
         });
       }
     });
