--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           <li>Fill "#c0ffee"</li>
           <li>Stroke "#bada55" </li>
           <li>StrokeWidth 2.0</li>
+          <li>IdentityS</li>
           <li>Fill "#f2abd2" :*** (Stroke "#000000" :*** StrokeWidth 3.0)</li>
         </ul>
         Transforms:
@@ -76,6 +77,7 @@
           <li>ScaleN 2.0 0.5</li>
           <li>Rotate 45.0</li>
           <li>Translate 1.5 2.0</li>
+          <li>IdentityT</li>
           <li>Rotate 90.0 :<+> (Scale 0.5 :<+> Translate 2.0 0.2)</li>
         </ul>
       </div>
